searchresult displays users w matching first or lastname

--- a/user-info-app/views/search.pug
+++ b/user-info-app/views/search.pug
@@ -6,4 +6,4 @@ html
 			input(type="hidden", name="_method", value="PUT")
 			p Search users:
 				input(type="text", name="name")
-				input(type="submit")
+				input(type="submit" value="Search")
