finished initial styling

--- a/assignments/financial-planning-app/views/index.pug
+++ b/assignments/financial-planning-app/views/index.pug
@@ -2,20 +2,20 @@ html
 	head
 		title Ca$h Moneyz
 		link(type="text/css", rel="stylesheet", href="/css/materialize.css")
+		link(type="text/css", rel="stylesheet", href="/css/style.css")
 	body(class="teal lighten-5")
 		div.navbar-fixed
-			nav
+			nav.teal
 				div.nav-wrapper
-					a(href="#!" class="brand-logo right") The Crystal Ball of Finances
+					a(href="#!" class="brand-logo center") The Crystal Ball of Finances
 					
 		div(class="container white")
+			div(class="row valign-wrapper")
+				div(class="col s2")
+					img(class= "circle responsive-img" src="http://s13.mindvalley.us/psychic-test/media/images/psychic-test-blog-post-psychic-tools-glass-ball-small.jpg")
+				div(class="col s10")
+					h5(class="left-align") Answer these questions to predict your financial future!
 			div(class="container white")
-				div(class="row valign-wrapper")
-					div(class="col s2")
-						img(class= "circle responsive-img" src="http://s13.mindvalley.us/psychic-test/media/images/psychic-test-blog-post-psychic-tools-glass-ball-small.jpg")
-					div(class="coll s10")
-					span(class="flow-text")
-						h5(class="left-align") Answer these questions to predict your financial future!
 				div.row
 					form(class="col s12" method="POST", action="/index", value="PUT" )
 						div.row
@@ -34,10 +34,11 @@ html
 							div(class="input-field col s12")
 								input(id="retireage" type="number" length="3")
 								label(for="retireage") At what age do you plan to throw in the towel?
-							div(class="button col s6")
-								button(class="btn waves-effect waves-light" type="submit" id="calc") Predict my future...
+							div.row
+							div(class="button col s8")
+								button(class="btn teal-effect teal" type="submit" id="calc") Predict my future...
 									i(class="material-icons right")
-							
+								
 
 
 
