installed and saved pug, added jquery to search.pug

--- a/assignments/financial-planning-app/views/index.pug
+++ b/assignments/financial-planning-app/views/index.pug
@@ -1,6 +1,6 @@
 html
 	head
-		title Ca$h Moneyz
+		title Da Future
 		link(type="text/css", rel="stylesheet", href="/css/materialize.css")
 		link(type="text/css", rel="stylesheet", href="/css/style.css")
 	body(class="teal lighten-5")
@@ -39,9 +39,6 @@ html
 								button(class="btn teal-effect teal" type="submit" id="calc") Predict my future...
 									i(class="material-icons right")
 								
-
-
-
 
 		script(type="text/javascript", src="/javascript/jquery-3.1.1.js")
 		script(type="text/javascript", src="/javascript/materialize.js")
