--- a/assignments/user-information-app/views/search.pug
+++ b/assignments/user-information-app/views/search.pug
@@ -1,6 +1,9 @@
 html
 	head
-		script(src="/javascript/jquery-3.1.1.js")
+		link(type="text/css", rel="stylesheet", href="/css/materialize.css")
+		link(type="text/css", rel="stylesheet", href="/css/style.css")
+		script(type="text/javascript" src="/javascript/jquery-3.1.1.js")
+		script(type="text/javascript", src="/javascript/materialize.js")
 	body
 		h1 Search Users Here
 		form(method="POST", action="/search")
