--- a/assignments/user-information-app/views/add.pug
+++ b/assignments/user-information-app/views/add.pug
@@ -1,5 +1,9 @@
 html
 	head
+		link(type="text/css", rel="stylesheet", href="/css/materialize.css")
+		link(type="text/css", rel="stylesheet", href="/css/style.css")
+		script(type="text/javascript" src="/javascript/jquery-3.1.1.js")
+		script(type="text/javascript", src="/javascript/materialize.js")
 	body
 		h1 Add new user
 		form(method="POST", action="/add", name="_method", value="PUT")
