--- a/assignments/user-information-app/views/index.pug
+++ b/assignments/user-information-app/views/index.pug
@@ -1,5 +1,9 @@
 html
 	head
+		link(type="text/css", rel="stylesheet", href="/css/materialize.css")
+		link(type="text/css", rel="stylesheet", href="/css/style.css")
+		script(type="text/javascript" src="/javascript/jquery-3.1.1.js")
+		script(type="text/javascript", src="/javascript/materialize.js")
 	body
 		h1 Country Information App
 		h2 Users:
