--- a/assignments/user-information-app/views/main.pug
+++ b/assignments/user-information-app/views/main.pug
@@ -22,4 +22,4 @@ html
 					h5(class="center-align") Hi! <br> Welcome to this user information app!
 			div(class="row valign-wrapper")
 				div(class="col s12")
-					p This app allows you to view, search or add users to the database.
+					p(class="center-align") This app allows you to view, search or add users to the database.
