--- a/assignments/user-information-app/views/search.pug
+++ b/assignments/user-information-app/views/search.pug
@@ -4,10 +4,27 @@ html
 		link(type="text/css", rel="stylesheet", href="/css/style.css")
 		script(type="text/javascript" src="/javascript/jquery-3.1.1.js")
 		script(type="text/javascript", src="/javascript/materialize.js")
-	body
-		h1 Search Users Here
-		form(method="POST", action="/search")
-			input(type="hidden", name="_method", value="PUT")
-			p Search users:
-				input(type="text", name="name")
-				input(type="submit" value="Search")
+	body(class="red lighten-5")
+		div.navbar-fixed
+			nav(class="red lighten-1")
+				div.nav-wrapper
+					a(href="/" class="brand-logo left") User Information App
+					ul(id="nav-mobile" class="right")
+						li
+							a(href='/users') View
+						li
+							a(href='#!') Search
+						li
+							a(href='/add') Add
+		div(class="container white")
+			div(class="row valign-wrapper")
+				div(class="col s12")
+					h5(class="center-align") Search <br> Enter a name to search for a user
+			div(class="row valign-wrapper")
+				div(class="col s12")
+					p(class="center-align") You can find users either by first or lastname.
+							form(method="POST", action="/search")
+								input(type="hidden", name="_method", value="PUT")
+								p Search users:
+									input(type="text", name="name")
+									input(type="submit" value="Search")
