--- a/assignments/user-information-app/views/add.pug
+++ b/assignments/user-information-app/views/add.pug
@@ -4,20 +4,38 @@ html
 		link(type="text/css", rel="stylesheet", href="/css/style.css")
 		script(type="text/javascript" src="/javascript/jquery-3.1.1.js")
 		script(type="text/javascript", src="/javascript/materialize.js")
-	body
-		h1 Add new user
-		form(method="POST", action="/add", name="_method", value="PUT")
-			p Firstname:
-			p
-				input(type="text", name="firstname")
-			<br>
-			p Lastname:
-			p
-				input(type="text", name="lastname")
-			<br>
-			p Email:
-			p
-				input(type="email", name="email")
-			p
-			<br>
-				input(type="submit", value="Add user")
+	body(class="red lighten-5")
+		div.navbar-fixed
+			nav(class="red lighten-1")
+				div.nav-wrapper
+					a(href="/" class="brand-logo left") User Information App
+					ul(id="nav-mobile" class="right")
+						li
+							a(href='/users') View
+						li
+							a(href='/search') Search
+						li
+							a(href='#!') Add
+		div(class="container white")
+			div(class="row valign-wrapper")
+				div(class="col s12")
+					h5(class="center-align") Add a user
+			div(class="row valign-wrapper")
+				div(class="col s12")
+					p(class="center-align") Please use this form to add a new user to the database.
+					form(method="POST", action="/add", name="_method", value="PUT")
+						p Firstname:
+						p
+							input(type="text", name="firstname")
+						<br>
+						p Lastname:
+						p
+							input(type="text", name="lastname")
+						<br>
+						p Email:
+						p
+							input(type="email", name="email")
+						p
+						<br>
+							input(type="submit", value="Add user")
+
