changed underline color in forms

--- a/assignments/user-information-app/views/search.pug
+++ b/assignments/user-information-app/views/search.pug
@@ -19,7 +19,7 @@ html
 		div(class="container white")
 			div(class="row valign-wrapper")
 				div(class="col s12")
-					h5(class="center-align") Search <br> Enter a name to search for a user
+					h5(class="center-align") Enter a name to search for a user
 			div(class="row valign-wrapper")
 				div(class="col s12")
 					p(class="center-align") You can find users either by first or lastname.
