--- a/assignments/user-information-app/views/index.pug
+++ b/assignments/user-information-app/views/index.pug
@@ -19,7 +19,7 @@ html
 		div(class="container white")
 			div(class="row valign-wrapper")
 				div(class="col s12")
-					h5(class="center-align") Users <br> These are the users in our database.
+					h5(class="center-align") These are the users in our database:
 			div(class="row valign-wrapper")
 				div(class="col s12")
 					each thing in data
