--- a/assignments/user-information-app/views/search.pug
+++ b/assignments/user-information-app/views/search.pug
@@ -1,5 +1,6 @@
 html
 	head
+		link(href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
 		link(type="text/css", rel="stylesheet", href="/css/materialize.css")
 		link(type="text/css", rel="stylesheet", href="/css/style.css")
 		script(type="text/javascript" src="/javascript/jquery-3.1.1.js")
@@ -8,11 +9,22 @@ html
 		div.navbar-fixed
 			nav(class="red lighten-1")
 				div.nav-wrapper
-					a(href="/" class="brand-logo left") User Information App
-					ul(id="nav-mobile" class="right")
+					a(href="#!" class="brand-logo center") User Information App
+					a(href="#" data-activates="mobile-demo" class="button-collapse")
+						i(class="material-icons") menu
+					ul(id="nav-mobile" class="right hide-on-med-and-down")
 						li
 							a(href='/users') View
 						li
+							a(href='/search') Search
+						li
+							a(href='/add') Add
+					ul(class="side-nav" id="mobile-demo")
+						li
+							a(href='/') Home
+						li
+							a(href='/users') View
+						li.active
 							a(href='#!') Search
 						li
 							a(href='/add') Add
@@ -23,8 +35,10 @@ html
 			div(class="row valign-wrapper")
 				div(class="col s12")
 					p(class="center-align") You can find users either by first or lastname.
-							form(method="POST", action="/search")
-								input(type="hidden", name="_method", value="PUT")
-								p Search users:
-									input(type="text", name="name")
-									input(type="submit" value="Search")
+						form(method="POST", action="/search" name="_method", value="PUT")
+							div(class="input-field col s12")
+								input(type="text", name="name" id="search")
+								label(for="search") Search Users
+								button(class="btn red darken-2" type="submit" value="Search") Search
+script.
+	$(".button-collapse").sideNav()
