added autocomplete on input

--- a/assignments/user-information-app/views/main.pug
+++ b/assignments/user-information-app/views/main.pug
@@ -13,6 +13,8 @@ html
 					a(href="#" data-activates="mobile-demo" class="button-collapse")
 						i(class="material-icons") menu
 					ul(id="nav-mobile" class="right hide-on-med-and-down")
+						li.active
+							a(href='/') Home
 						li
 							a(href='/users') View
 						li
