--- a/assignments/user-information-app/views/add.pug
+++ b/assignments/user-information-app/views/add.pug
@@ -14,6 +14,8 @@ html
 						i(class="material-icons") menu
 					ul(id="nav-mobile" class="right hide-on-med-and-down")
 						li
+							a(href='/') Home
+						li
 							a(href='/users') View
 						li
 							a(href='/search') Search
