--- a/assignments/user-information-app/views/index.pug
+++ b/assignments/user-information-app/views/index.pug
@@ -13,6 +13,8 @@ html
 					a(href="#" data-activates="mobile-demo" class="button-collapse")
 						i(class="material-icons") menu
 					ul(id="nav-mobile" class="right hide-on-med-and-down")
+						li
+							a(href='/') Home
 						li.active
 							a(href='#!') View
 						li
