Form entry is now sent to database

--- a/assignments/bulletin-board/views/guestbook.pug
+++ b/assignments/bulletin-board/views/guestbook.pug
@@ -3,10 +3,10 @@ html
 	body
 		h1 Guestbook
 
-		form(action="/guestbook")
-		p title: <br>
-		input(type="text" name="title")
-		p message: <br>
-		textarea(type="text" name="body" rows="8" cols="30")
-		<br>
-		input(type="submit" value="Post")
+		form(autocomplete="off" method="POST" action="/guestbook")
+			p title: <br>
+			input(type="text" name="title")
+			p message: <br>
+			textarea(type="text" name="body" rows="8" cols="30")
+			<br>
+			input(type="submit" value="Post")
