--- a/assignments/bulletin-board/views/messages.pug
+++ b/assignments/bulletin-board/views/messages.pug
@@ -3,8 +3,11 @@ html
 		script(type="text/javascript" src="/javascript/jquery-3.1.1.js")
 	body
 		h1 hellooooooooooooo
-		each thing in data
-			p #{thing.title}
+		ul
+			li
+				each thing in data
+				p #{thing.title}
+				p #{thing.body}
 
 script.
 	
