finished basic functionality

--- a/assignments/bulletin-board/views/messages.pug
+++ b/assignments/bulletin-board/views/messages.pug
@@ -4,11 +4,8 @@ html
 	body
 		h1 hellooooooooooooo
 		ul
-			li
-				each thing in data
-				p #{thing.title}
-				p #{thing.body}
+			each thing in data
+				li #{thing.title} <br> #{thing.body} <br><br>
 
-script.
 	
 
