--- a/assignments/blog/views/main.pug
+++ b/assignments/blog/views/main.pug
@@ -24,7 +24,7 @@ html
 				br
 				label body
 				br
-				textarea#body(name='body', type='text', rows='10' cols='50' required)
+				textarea#body(name='laundry', type='text', rows='10' cols='50' required)
 				input#create(type='submit', value='post')
 
 		else
