--- a/assignments/blog/views/home.pug
+++ b/assignments/blog/views/home.pug
@@ -3,11 +3,15 @@ html
 	body
 		h2= user.name
 		h3= user.email
-		h4 My Posts:
+		h4 Posts by #{user.name}:
 		p
 			each thing in user.blogposts
 					li #{thing.title} <br> #{thing.body} <br><br>
 
+		a(href='/ownposts') view all posts by #{user.name}
+		br
+		a(href='/allposts') view all blogposts
+		br
 		a(href='/') home
 		br
 		a(href='/logout') logout
