new branch, input type password & installed bcrypt

--- a/assignments/blog/views/main.pug
+++ b/assignments/blog/views/main.pug
@@ -41,7 +41,7 @@ html
 				br
 				label password
 				br
-				input#password(name='password', required)
+				input#password(name='password', type='password', required)
 				input#submit(type='submit',formaction='/login', value='login')
 				br
 				br
