--- a/assignments/blog/views/main.pug
+++ b/assignments/blog/views/main.pug
@@ -9,7 +9,7 @@ html
 						$('#error-message').html('Your username or password is empty.')
 					}
 				})
-				$('#submit').click(function(event) {
+				$('#signup').click(function(event) {
 					if($('#email').val().trim().length === 0 || $('#password').val().trim().length === 0 || $('#name').val().trim().length === 0) {
 						event.preventDefault()
 						$('#error-message').html('Please make sure you\'ve filled out all required fields')
